2006-02-08  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* FtpWebRequest.cs: Remove WebExceptionStatus argument
	from CreateExceptionFromResponse, since exceptions gotten
	from server response always have a WebExceptionStatus.ProtocolError
	value.
	
2006-02-08  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* FtpWebRequest.cs: Add renaming support when using 
	WebRequestMethods.Ftp.Rename method.
	
2006-02-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ChunkedInputStream.cs:
	* ChunkStream.cs: handle partial trailers and zero reads. Patch by Pawel
	Sakowski.

2006-02-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebRequest.cs: don't send the expect-100 if if there's no content.

	* HttpListenerRequest.cs:
	* HttpConnection.cs:
	* RequestStream.cs: use the content length header to avoid reading past
	the end of the stream.

	Patch by Horst Reiterer.

2006-02-01  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* FtpWebRequest.cs: Add supportedCommands array with the sorted
	methods, to search using Array.BinarySearch. Remove CheckMethod.

2006-02-01  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* FtpWebRequest.cs: Fixed some typos and small issues.
	
2006-02-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebRequest.cs: dummy implementation of UnsafeAuthenticationBlah
	property.

2006-02-01  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* FtpRequestCreator.cs: 
	* FtpAsyncResult.cs:
	* FtpDataStream.cs:
	* FtpWebRequest.cs:
	* FtpWebResponse.cs: Initial implementation of FtpWebRequest (2.0)
	
2006-02-01  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* FtpStatusCode.cs: Fix a typo.
	
2006-01-26 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebClient.cs: (2.0) UploadString() returns string, not void.

2006-01-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebResponse.cs: ignore non-integer values for max-age and version.
	Fixes bug #77199. Thanks to Cyrille Colin.
